Updated Description of Food

--- a/devlogs/2105-1.md
+++ b/devlogs/2105-1.md
@@ -16,6 +16,7 @@ The Current Goal is to get all of the basics down for a striped down demo
 ## Products
 
 * Food
+  * Reduces Hunger: Effect Feed (Hunger - some value)
 
 ## New Things
 
